--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "concurrently": "^3.6.1"
   },
   "scripts": {
-    "start": "concurrently \"react-scripts start\" \"node index.js\"",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
