--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "proxy": "http://localhost:3001",
   "dependencies": {
     "@twilio/conversations": "1.2.0",
+    "@types/jest": "^28.1.4",
+    "@types/node": "^18.0.3",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
     "antd": "^3.26.20",
     "dotenv": "^10.0.0",
     "ngrok": "^3.4.0",
@@ -16,7 +20,8 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "4.0.1",
     "request-promise": "^4.2.6",
-    "twilio": "~3.6.6"
+    "twilio": "^3.78.0",
+    "typescript": "^4.7.4"
   },
   "devDependencies": {
     "concurrently": "^3.6.1"
