--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "private": true,
   "proxy": "http://localhost:3001",
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "@twilio/conversations": "1.2.0",
     "@types/jest": "^28.1.4",
     "@types/node": "^18.0.3",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
-    "antd": "^3.26.20",
+    "antd": "^4.21.5",
     "dotenv": "^10.0.0",
+    "es6-promise": "^4.2.8",
     "ngrok": "^3.4.0",
     "node-sass": "^6.0.1",
     "prop-types": "^15.7.2",
