--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "4.0.1",
     "request-promise": "^4.2.6",
+    "styled-components": "^5.3.5",
     "twilio": "^3.78.0",
     "typescript": "^4.7.4"
   },
