--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "typescript": "^4.7.4"
   },
   "devDependencies": {
+    "@types/styled-components": "^5.1.25",
     "concurrently": "^3.6.1"
   },
   "scripts": {
