--- a/package.json
+++ b/package.json
@@ -4,30 +4,23 @@
   "private": true,
   "proxy": "http://localhost:3001",
   "dependencies": {
+    "antd": "^4.21.5",
     "@ant-design/icons": "^4.7.0",
     "@twilio/conversations": "2.1.0",
-    "@types/jest": "^28.1.4",
-    "@types/node": "^18.0.3",
-    "@types/react": "^18.0.15",
-    "@types/react-dom": "^18.0.6",
-    "antd": "^4.21.5",
-    "dotenv": "^10.0.0",
-    "es6-promise": "^4.2.8",
-    "ngrok": "^3.4.0",
-    "node-sass": "^6.0.1",
-    "prop-types": "^15.7.2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "4.0.1",
-    "request-promise": "^4.2.6",
     "styled-components": "^5.3.5",
     "twilio": "^3.78.0",
     "typescript": "^4.7.4"
   },
   "devDependencies": {
-    "@types/styled-components": "^5.1.25",
-    "concurrently": "^3.6.1"
+    "@types/jest": "^28.1.4",
+    "@types/node": "^18.0.3",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
+    "@types/styled-components": "^5.1.25"
   },
   "scripts": {
     "start": "react-scripts start",
