--- a/package.json
+++ b/package.json
@@ -4,16 +4,17 @@
   "private": true,
   "proxy": "http://localhost:3001",
   "dependencies": {
-    "antd": "^4.21.5",
     "@ant-design/icons": "^4.7.0",
     "@twilio/conversations": "2.1.0",
+    "antd": "^4.21.5",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "4.0.1",
     "styled-components": "^5.3.5",
     "twilio": "^3.78.0",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@types/jest": "^28.1.4",
