--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
     "styled-components": "^5.3.5",
     "twilio": "^3.78.0",
     "typescript": "^4.7.4",
-    "uuidv4": "^6.2.13"
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/jest": "^28.1.4",
     "@types/node": "^18.0.3",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
-    "@types/styled-components": "^5.1.25"
+    "@types/styled-components": "^5.1.25",
+    "@types/uuid": "^8.3.4"
   },
   "scripts": {
     "start": "react-scripts start",
