--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@ant-design/icons": "^4.7.0",
     "@twilio/conversations": "2.1.0",
     "antd": "^4.21.5",
+    "cacache": "^16.1.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-router-dom": "^4.3.1",
