--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
     "antd": "^4.21.5",
     "cacache": "^16.1.1",
     "react": "^16.14.0",
-    "react-dom": "^16.14.0",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^5.0.1",
     "styled-components": "^5.3.5",
     "twilio": "^3.78.0",
     "typescript": "^4.7.4",
