--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "antd": "^4.21.5",
     "cacache": "^16.1.1",
     "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-scripts": "^5.0.1",
     "styled-components": "^5.3.5",
     "twilio": "^3.78.0",
