--- a/package.json
+++ b/package.json
@@ -13,16 +13,14 @@
     "react-scripts": "^5.0.1",
     "styled-components": "^5.3.5",
     "twilio": "^3.78.0",
-    "typescript": "^4.7.4",
-    "uuid": "^8.3.2"
+    "typescript": "^4.7.4"
   },
   "devDependencies": {
     "@types/jest": "^28.1.4",
     "@types/node": "^18.0.3",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
-    "@types/styled-components": "^5.1.25",
-    "@types/uuid": "^8.3.4"
+    "@types/styled-components": "^5.1.25"
   },
   "scripts": {
     "start": "react-scripts start",
